--- a/styles/components/_header-top.scss
+++ b/styles/components/_header-top.scss
@@ -125,6 +125,7 @@
     }
 
     @media (max-height: $round-image-vertical-breakpoint-sm) {
+      bottom: -120px;
       .btn {
         font-size: $font-size-tiny;
       }
